--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.9", features = ["derive"] }
+expanduser = "1.2.2"
+home = "0.5.9"
 reqwest = {version = "0.12.5", features = ["blocking"]}
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
