--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = "1.0.86"
 clap = { version = "4.5.9", features = ["derive"] }
 expanduser = "1.2.2"
 home = "0.5.9"
+lazy_static = "1.5.0"
+regex = "1.10.5"
 reqwest = {version = "0.12.5", features = ["blocking"]}
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
