--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.9", features = ["derive"] }
 expanduser = "1.2.2"
 home = "0.5.9"
 htmd = "0.1.6"
+html2md = "0.2.14"
 html5ever = "0.28.0"
 lazy_static = "1.5.0"
 markup5ever_rcdom = "0.3.0"
