Added pandoc parsing, editor selection
Added in pandoc and parsing to and from markdown
Added ability for user to select their own editor, defaults to vim

--- a/example_config.toml
+++ b/example_config.toml
@@ -1,6 +1,8 @@
 # MANDATORY: The location to save downloaded pages to.
 save_location = '~/confluence_downloads'
 
+# OPTIONAL: The editor to open the markdown file in. Defaults to vim
+
 # MANDATORY: api stores the api access information for confluence
 [api]
 # The domain of your confluence instance (i.e. https://<your-domain>/wiki/...)
