--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,9 @@ anyhow = "1.0.86"
 clap = { version = "4.5.9", features = ["derive"] }
 expanduser = "1.2.2"
 home = "0.5.9"
-htmd = "0.1.6"
-html2md = "0.2.14"
-regex = "1.10.5"
 reqwest = {version = "0.12.5", features = ["blocking"]}
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 text_io = "0.1.12"
 toml = "0.8.15"
+pandoc = "0.8.11"
