--- a/example_config.toml
+++ b/example_config.toml
@@ -4,6 +4,9 @@ save_location = '~/confluence_downloads'
 # OPTIONAL: The location to save the history file to. Defaults to the same as save_location
 history_location = '~/confluence_downloads'
 
+# OPTIONAL: Always sync the page automatically on editor exit without asking. Defaults to false
+auto_sync = 'false'
+
 # OPTIONAL: The editor to open the markdown file in. Defaults to vim
 [editor]
 # Cmd used to open the editor
