Added ratatui TUI as an alternate to cursive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ text_io = "0.1.12"
 toml = "0.8.15"
 pandoc = "0.8.11"
 cursive = "0.21"
+ratatui = "0.29.0"
+crossterm = "0.29.0"
+simple-logging = "2.0.2"
+log = "*"
