--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ crossterm = "0.29.0"
 edit = "0.1.5"
 dirs = "6.0.0"
 lib_cfm = { path = "../lib_cfm/" }
+markdown = "1.0.0"
+htmd = "0.4.0"
+
 
 [target.'cfg(target_family = "unix")'.dependencies]
 expanduser = "1.2.2"
