--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ ratatui = "0.29.0"
 crossterm = "0.29.0"
 edit = "0.1.5"
 dirs = "6.0.0"
-lib_cfm = { path = "../lib_cfm/" }
+# lib_cfm = { path = "../lib_cfm/" }
 markdown = "1.0.0"
 htmd = "0.4.0"
 
