--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ ratatui = "0.29.0"
 crossterm = "0.29.0"
 edit = "0.1.5"
 # lib_cfm = { path = "../lib_cfm/" }
-markdown = "1.0.0"
+# markdown = "1.0.0"
 htmd = "0.4.0"
-
+pandoc = "0.8"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 expanduser = "1.2.2"
